Atualizando com padrões de projeto

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
     
 
     <h2>Open Roles: </h2>
-     <% categorias.forEach(categoria => { %>   
+     <% locals.categorias.forEach(categoria => { %>   
     <div>
         <h3><%- categoria.categoria %></h3>
         <ul>
